# decisionkit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  audit.md  concepts.md  config.md  examples.md  index.md  quickstart.md  rules.md
examples/: django_service_example.py  fastapi_example.py  reviewer_selection.py  risk_scoring.py  task_prioritization.py  vendor_ranking.py
src/decisionkit/: __init__.py  audit.py  config.py  engine.py  exceptions.py  explanations.py  models.py  normalization.py  rules.py  typing.py
src/decisionkit/methods/: __init__.py  base.py  topsis.py  weighted_sum.py
tests/: test_audit.py  test_backward_compat.py  test_config.py  test_edge_cases.py  test_explanations.py  test_public_api.py  test_rules.py  test_topsis.py  test_validation.py  test_weighted_sum.py
