[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decisionkit"
version = "0.3.1"
description = "Lightweight explainable scoring and ranking engine for Python backends."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "DecisionKit Contributors" },
]
keywords = [
    "decision-support",
    "scoring",
    "ranking",
    "decision-engine",
    "fastapi",
    "django",
    "mcdm",
    "mcda",
    "explainable-ai",
    "topsis",
    "weighted-sum",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
yaml = [
    "PyYAML>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "PyYAML>=6.0",
    "build>=1.2",
    "twine>=5.0",
]
docs = []

[project.urls]
Homepage = "https://github.com/mdkefir/decisionkit"
Documentation = "https://github.com/mdkefir/decisionkit/tree/main/docs"
Repository = "https://github.com/mdkefir/decisionkit"
Issues = "https://github.com/mdkefir/decisionkit/issues"
Changelog = "https://github.com/mdkefir/decisionkit/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["decisionkit*"]
namespaces = false

[tool.setuptools.package-data]
decisionkit = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["decisionkit"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["decisionkit"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
